...
            onPress={onBuyNow}
          />

          {inCart ? (
            <ActionTile testID="product-detail-go-to-cart-button" icon="checkmark-circle" label="Sepette" onPress={onGoToCart} />
          ) : (
            <ActionTile testID="product-detail-add-to-cart-button" icon="cart" label="Sepete Ekle" onPress={onAddToCart} />
          )}
        </View>
      )}
    </View>
  );
}
...
